src/tui/snapshots/binllion__tui__main_panel__tests__tui_hex_header_label.snap
---
source: src/tui/main_panel.rs
expression: terminal.backend()
---
"         +0 +1 +2 +3 +4 +5 +6 +7 +8 +9 +A +B +C +D +E +F                        "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
